package com.tasarim.composite;

public interface CampField {
    void showInfo();
}